tests/paczka1/fuzzy1/29195757.err
Error in line 17: e9sq5f S621 43,6
Error in line 27: e9sq5f S943 50,4
